[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "zafkiel"
version = "0.0.1"
description = "A cross-platform UI automation framework based on Airtest and StarRailCopilot."
authors = [{name = "Aues6uen11Z"}]
readme = "README.md"
dependencies = [
    "airtest >= 1.3.1",
    "pyautogui >= 0.9.54",
]
license = { file = "LICENSE" }
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/Aues6uen11Z/Zafkiel"

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"zafkiel/__init__.py" = ["{version}"]

