[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "zafkiel"
version = "0.0.1"
description = "A cross-platform UI automation framework based on Airtest and StarRailCopilot."
authors = [{name = "Aues6uen11Z"}]
readme = "README.md"
license = "GPL-3.0 license"
requires-python = ">=3.6"
dependencies = [
    "airtest >= 1.3.1",
    "pyautogui >= 0.9.54",
    "loguru >= 0.7.2",
    "pponnxcr >= 2.0"
]

[project.urls]
Homepage = "https://github.com/Aues6uen11Z/Zafkiel"

[project.optional-dependencies]
dev = ["bumpver", "pip-tools"]

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"zafkiel/__init__.py" = ["{version}"]

