[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "zafkiel"
dynamic = ["version"]
description = "A cross-platform UI automation framework based on Airtest and StarRailCopilot."
authors = [{name = "Aues6uen11Z"}]
readme = "README.md"
license = {text = "GPL-3.0 license"}
requires-python = ">=3.6"
dependencies = [
    "airtest == 1.3.3",
    "pyautogui == 0.9.54",
    "loguru == 0.7.2",
    "pponnxcr == 2.1"
]

[project.urls]
Homepage = "https://github.com/Aues6uen11Z/Zafkiel"

[project.optional-dependencies]
dev = ["pip-tools"]

[tool.setuptools_scm]
write_to = "zafkiel/_version.py"

